--- a/DSB2022/DSB2022.md
+++ b/DSB2022/DSB2022.md
@@ -23,47 +23,52 @@ As previously, there is no formal review, and the organizers reserve the right t
 
 ## Program
 
-* Day 1: the 13th of June 2022, 09:00 - 18:00
+* Day 1: the 13th of June 2022, 09:00 - 17:30
 
-| **Speaker**                  | **Title**                                                                                                      | **Time**      |
-|------------------------------|----------------------------------------------------------------------------------------------------------------|---------------|
-| Tobias Marschall/Gunnar Klau | Welcoming/opening talk                                                                                         | 09:00 - 09:15 |
-| Rayan Chikhi                 | Minimizer Space de Bruijn Graphs for Pangenomics                                                               | 09:20 - 09:45 |
-| Andreas Rempel               | Developing a standard interface for k-mer-based index structures                                               | 09:45 - 10:10 |
-| Nicola Cotumaccio            | Graph pattern matching: what if labels can be strings?                                                         | 10:10 - 10:35 |
-| Ramin Shirali Hossein Zade   | HAT: Haplotype Assembly Tool using short and long reads                                                        | 10:35 - 11:00 |
-| Jasper van Bemmelen          | An optimized amplicon sequencing approach to estimating SARS-CoV-2 variant abundances in wastewater            | 11:00 - 11:25 |
-| Sandra Romain                | SVJedi-graph: using a variation graph to improve structural variant genotyping with long reads                 | 11:25 - 11:50 |
-| _Lunch Break_                |                                                                                                                | 11:50 - 13:20 |
-| Luca Parmigiani              | Open and closed pangenomes with k-mer counting                                                                 | 13:20 - 13:45 |
-| Manuel Cáceres               | Chaining for Accurate Alignment of Erroneous Long Reads to Acyclic Variation Graphs                            | 13:45 - 14:10 |
-| Jorge Avila Cartes           | Accurate classification of SARS-CoV-2 clades using Frequency Chaos Game Representation                         | 14:10 - 14:35 |
-| Antoine Limasset             | Toward optimal fingerprint indexing for large scale genomics                                                   | 14:35 - 15:00 |
-| Lucas Robidou                | fimpera: low memory counting Approximate Membership Query                                                      | 15:00 - 15:25 |
-| _Coffee Break_               |                                                                                                                | 15:25 - 15:50 |
-| Roland Wittler               | Bit-encoding of canonical k-mers                                                                               | 15:50 - 16:30 |
-| Yoshihiro Shibuya            | Space-efficient sets differences with applications to Jaccard estimation                                       | 16:30 - 16:55 |
-| Sebastian Schmidt            | Minimum plain text representation of kmer sets                                                                 | 16:55 - 17:20 |
-| Victor Epain                 | The reverse complement symmetry advantage of DNA fragments relationships for their storage in a directed graph | 17:30 - 17:55 |
+| **Speaker**                | **Title**                                                                                                      | **Time**      |
+|----------------------------|----------------------------------------------------------------------------------------------------------------|---------------|
+| Tobias/Gunnar              | _Welcome_                                                                                                      | 09:00 - 09:15 |
+| Rayan Chikhi               | Minimizer Space de Bruijn Graphs for Pangenomics                                                               | 09:20 - 09:45 |
+| Andreas Rempel             | Developing a standard interface for k-mer-based index structures                                               | 09:45 - 10:10 |
+| Nicola Cotumaccio          | Graph pattern matching: what if labels can be strings?                                                         | 10:10 - 10:35 |
+| _Break_                    |                                                                                                                |               |
+| Ramin Shirali Hossein Zade | HAT: Haplotype Assembly Tool using short and long reads                                                        | 11:00 - 11:25 |
+| Jasper van Bemmelen        | An optimized amplicon sequencing approach to estimating SARS-CoV-2 variant abundances in wastewater            | 11:25 - 11:50 |
+| Sandra Romain              | SVJedi-graph: using a variation graph to improve structural variant genotyping with long reads                 | 11:50 - 12:15 |
+| _Lunch break_              |                                                                                                                |               |
+| Luca Parmigiani            | Open and closed pangenomes with k-mer counting                                                                 | 13:15 - 13:40 |
+| Manuel Cáceres             | Chaining for Accurate Alignment of Erroneous Long Reads to Acyclic Variation Graphs                            | 13:40 - 14:05 |
+| Jorge Avila Cartes         | Accurate classification of SARS-CoV-2 clades using Frequency Chaos Game Representation                         | 14:05 - 14:30 |
+| _Coffee break_             |                                                                                                                |               |
+| Antoine Limasset           | Toward optimal fingerprint indexing for large scale genomics                                                   | 14:40 - 15:05 |
+| Lucas Robidou              | fimpera: low memory counting Approximate Membership Query                                                      | 15:05 - 15:30 |
+| Roland Wittler             | Bit-encoding of canonical k-mers                                                                               | 15:30 - 15:55 |
+| _Coffee break_             |                                                                                                                |               |
+| Yoshihiro Shibuya          | Space-efficient sets differences with applications to Jaccard estimation                                       | 16:15 - 16:40 |
+| Sebastian Schmidt          | Minimum plain text representation of kmer sets                                                                 | 16:40 - 17:05 |
+| Victor Epain               | The reverse complement symmetry advantage of DNA fragments relationships for their storage in a directed graph | 17:05 - 17:30 |
+
 
 * Day 2: the 14th of June 2022, 09:00 - 16:00
 
-| **Speaker**                  | **Title**                                                                                                      | **Time**      |
-|------------------------------|----------------------------------------------------------------------------------------------------------------|---------------|
-| Nicola Rizzo                 | Suffix Tree Maneuvers for the Construction of Elastic Founder Graphs                                           | 09:00 - 09:25 |
-| Konstantinn Bonnet           | Constructing founder sets under allelic and non-allelic homologous recombination                               | 09:25 - 09:50 |
-| Karel Brinda                 | The tree of life enables efficient and robust compression and search of microbes                               | 09:50 - 10:15 |
-| Barış Ekim                   | Approximate pattern counting in de Bruijn graphs is #W[1]-hard                                                 | 10:15 - 10:40 |
-| Pengfei Wang                 | Autocorrelations of strings: an upper bound.                                                                   | 10:40 - 11:05 |
-| Diego Diaz                   | Efficient computation of MEMs in string collections using dictionary-based compression                         | 11:10 - 11:35 |
-| _Lunch_                      |                                                                                                                | 11:35 - 12:55 |
-| Jarno Alanko                 | Succinct k-mer Set Representations Using Subset Rank Queries on the Spectral Burrows-Wheeler Transform (SBWT)  | 13:00 - 13:25 |
-| Giulio Ermanno Pibiri        | PTHash: Revisiting FCH Minimal Perfect Hashing                                                                 | 13:25 - 13:50 |
-| Jens Zentgraf                | Fast gapped k-mer counting with subdivided multi-way bucketed Cuckoo hash tables                               | 13:50 - 14:15 |
-| Fernando Hugo Cunha Dias     | Fast, Flexible, and Exact Minimum Flow Decompositions via Integer Linear Programming                           | 14:20 - 14:45 |
-| Frederick Oehl               | Would like to give a talk on his Master project, if at all possible.                                           | 14:45 - 15:10 |
-| Andreas Grigorjew            | Width Helps and Hinders Splitting Flows                                                                        | 15:10 - 15:35 |
-| _Closing Remarks_            |                                                                                                                | 15:35 - 16:00 |
+| **Speaker**              | **Title**                                                                                                     | **Time**      |
+|--------------------------|---------------------------------------------------------------------------------------------------------------|---------------|
+| Nicola Rizzo             | Suffix Tree Maneuvers for the Construction of Elastic Founder Graphs                                          | 09:00 - 09:25 |
+| Konstantinn Bonnet       | Constructing founder sets under allelic and non-allelic homologous recombination                              | 09:25 - 09:50 |
+| Karel Brinda             | The tree of life enables efficient and robust compression and search of microbes                              | 09:50 - 10:15 |
+| _Coffee break_           |                                                                                                               |               |
+| Barış Ekim               | Approximate pattern counting in de Bruijn graphs is #W[1]-hard                                                | 10:30 - 10:55 |
+| Pengfei Wang             | Autocorrelations of strings: an upper bound.                                                                  | 10:55 - 11:20 |
+| Diego Diaz               | Efficient computation of MEMs in string collections using dictionary-based compression                        | 11:20 - 11:55 |
+| _Lunch break_            |                                                                                                               |               |
+| Jarno Alanko             | Succinct k-mer Set Representations Using Subset Rank Queries on the Spectral Burrows-Wheeler Transform (SBWT) | 13:00 - 13:25 |
+| Giulio Ermanno Pibiri    | PTHash: Revisiting FCH Minimal Perfect Hashing                                                                | 13:25 - 13:50 |
+| Jens Zentgraf            | Fast gapped k-mer counting with subdivided multi-way bucketed Cuckoo hash tables                              | 13:50 - 14:15 |
+| _Coffee break_           |                                                                                                               |               |
+| Fernando Hugo Cunha Dias | Fast, Flexible, and Exact Minimum Flow Decompositions via Integer Linear Programming                          | 14:30 - 14:55 |
+| Frederick Oehl           | Would like to give a talk on his Master project, if at all possible.                                          | 14:55 - 15:20 |
+| Andreas Grigorjew        | Width Helps and Hinders Splitting Flows                                                                       | 15:20 - 15:55 |
+| Tobias/Gunnar            | _Closing remarks_                                                                                             | 15:55 - 16:00 |
 
 ## Participants
 
@@ -74,7 +79,7 @@ If you do not wish to have your name on the list, please contact us at [dsb2022@
 
 ### When
 
-* Monday, the 13th of June, 09:00 to 18:00: first workshop day
+* Monday, the 13th of June, 09:00 to 17:30: first workshop day
 * Tuesday, the 14th of June, 09:00 to 16:00: second workshop day
 
 ### Where
