hackfix alignment of Time column

--- a/DSB2022/DSB2022.md
+++ b/DSB2022/DSB2022.md
@@ -25,50 +25,50 @@ As previously, there is no formal review, and the organizers reserve the right t
 
 * Day 1: the 13th of June 2022, 09:00 - 17:30
 
-| **Speaker**                | **Title**                                                                                                      | **Time**      |
-|----------------------------|----------------------------------------------------------------------------------------------------------------|---------------|
-| Tobias/Gunnar              | _Welcome_                                                                                                      | 09:00 - 09:15 |
-| Rayan Chikhi               | Minimizer Space de Bruijn Graphs for Pangenomics                                                               | 09:20 - 09:45 |
-| Andreas Rempel             | Developing a standard interface for k-mer-based index structures                                               | 09:45 - 10:10 |
-| Nicola Cotumaccio          | Graph pattern matching: what if labels can be strings?                                                         | 10:10 - 10:35 |
-| _Break_                    |                                                                                                                |               |
-| Ramin Shirali Hossein Zade | HAT: Haplotype Assembly Tool using short and long reads                                                        | 11:00 - 11:25 |
-| Jasper van Bemmelen        | An optimized amplicon sequencing approach to estimating SARS-CoV-2 variant abundances in wastewater            | 11:25 - 11:50 |
-| Sandra Romain              | SVJedi-graph: using a variation graph to improve structural variant genotyping with long reads                 | 11:50 - 12:15 |
-| _Lunch break_              |                                                                                                                |               |
-| Luca Parmigiani            | Open and closed pangenomes with k-mer counting                                                                 | 13:15 - 13:40 |
-| Manuel Cáceres             | Chaining for Accurate Alignment of Erroneous Long Reads to Acyclic Variation Graphs                            | 13:40 - 14:05 |
-| Jorge Avila Cartes         | Accurate classification of SARS-CoV-2 clades using Frequency Chaos Game Representation                         | 14:05 - 14:30 |
-| _Coffee break_             |                                                                                                                |               |
-| Antoine Limasset           | Toward optimal fingerprint indexing for large scale genomics                                                   | 14:40 - 15:05 |
-| Lucas Robidou              | fimpera: low memory counting Approximate Membership Query                                                      | 15:05 - 15:30 |
-| Roland Wittler             | Bit-encoding of canonical k-mers                                                                               | 15:30 - 15:55 |
-| _Coffee break_             |                                                                                                                |               |
-| Yoshihiro Shibuya          | Space-efficient sets differences with applications to Jaccard estimation                                       | 16:15 - 16:40 |
-| Sebastian Schmidt          | Minimum plain text representation of kmer sets                                                                 | 16:40 - 17:05 |
-| Victor Epain               | The reverse complement symmetry advantage of DNA fragments relationships for their storage in a directed graph | 17:05 - 17:30 |
+| **Speaker**                | **Title**                                                                                                      | **Time**                |
+|----------------------------|----------------------------------------------------------------------------------------------------------------|-------------------------|
+| Tobias/Gunnar              | _Welcome_                                                                                                      | 09:00&nbsp;-&nbsp;09:15 |
+| Rayan Chikhi               | Minimizer Space de Bruijn Graphs for Pangenomics                                                               | 09:20&nbsp;-&nbsp;09:45 |
+| Andreas Rempel             | Developing a standard interface for k-mer-based index structures                                               | 09:45&nbsp;-&nbsp;10:10 |
+| Nicola Cotumaccio          | Graph pattern matching: what if labels can be strings?                                                         | 10:10&nbsp;-&nbsp;10:35 |
+| _Break_                    |                                                                                                                |                         |
+| Ramin Shirali Hossein Zade | HAT: Haplotype Assembly Tool using short and long reads                                                        | 11:00&nbsp;-&nbsp;11:25 |
+| Jasper van Bemmelen        | An optimized amplicon sequencing approach to estimating SARS-CoV-2 variant abundances in wastewater            | 11:25&nbsp;-&nbsp;11:50 |
+| Sandra Romain              | SVJedi-graph: using a variation graph to improve structural variant genotyping with long reads                 | 11:50&nbsp;-&nbsp;12:15 |
+| _Lunch break_              |                                                                                                                |                         |
+| Luca Parmigiani            | Open and closed pangenomes with k-mer counting                                                                 | 13:15&nbsp;-&nbsp;13:40 |
+| Manuel Cáceres             | Chaining for Accurate Alignment of Erroneous Long Reads to Acyclic Variation Graphs                            | 13:40&nbsp;-&nbsp;14:05 |
+| Jorge Avila Cartes         | Accurate classification of SARS-CoV-2 clades using Frequency Chaos Game Representation                         | 14:05&nbsp;-&nbsp;14:30 |
+| _Coffee break_             |                                                                                                                |                         |
+| Antoine Limasset           | Toward optimal fingerprint indexing for large scale genomics                                                   | 14:40&nbsp;-&nbsp;15:05 |
+| Lucas Robidou              | fimpera: low memory counting Approximate Membership Query                                                      | 15:05&nbsp;-&nbsp;15:30 |
+| Roland Wittler             | Bit-encoding of canonical k-mers                                                                               | 15:30&nbsp;-&nbsp;15:55 |
+| _Coffee break_             |                                                                                                                |                         |
+| Yoshihiro Shibuya          | Space-efficient sets differences with applications to Jaccard estimation                                       | 16:15&nbsp;-&nbsp;16:40 |
+| Sebastian Schmidt          | Minimum plain text representation of kmer sets                                                                 | 16:40&nbsp;-&nbsp;17:05 |
+| Victor Epain               | The reverse complement symmetry advantage of DNA fragments relationships for their storage in a directed graph | 17:05&nbsp;-&nbsp;17:30 |
 
 
 * Day 2: the 14th of June 2022, 09:00 - 16:00
 
-| **Speaker**              | **Title**                                                                                                     | **Time**      |
-|--------------------------|---------------------------------------------------------------------------------------------------------------|---------------|
-| Nicola Rizzo             | Suffix Tree Maneuvers for the Construction of Elastic Founder Graphs                                          | 09:00 - 09:25 |
-| Konstantinn Bonnet       | Constructing founder sets under allelic and non-allelic homologous recombination                              | 09:25 - 09:50 |
-| Karel Brinda             | The tree of life enables efficient and robust compression and search of microbes                              | 09:50 - 10:15 |
-| _Coffee break_           |                                                                                                               |               |
-| Barış Ekim               | Approximate pattern counting in de Bruijn graphs is #W[1]-hard                                                | 10:30 - 10:55 |
-| Pengfei Wang             | Autocorrelations of strings: an upper bound.                                                                  | 10:55 - 11:20 |
-| Diego Diaz               | Efficient computation of MEMs in string collections using dictionary-based compression                        | 11:20 - 11:55 |
-| _Lunch break_            |                                                                                                               |               |
-| Jarno Alanko             | Succinct k-mer Set Representations Using Subset Rank Queries on the Spectral Burrows-Wheeler Transform (SBWT) | 13:00 - 13:25 |
-| Giulio Ermanno Pibiri    | PTHash: Revisiting FCH Minimal Perfect Hashing                                                                | 13:25 - 13:50 |
-| Jens Zentgraf            | Fast gapped k-mer counting with subdivided multi-way bucketed Cuckoo hash tables                              | 13:50 - 14:15 |
-| _Coffee break_           |                                                                                                               |               |
-| Fernando Hugo Cunha Dias | Fast, Flexible, and Exact Minimum Flow Decompositions via Integer Linear Programming                          | 14:30 - 14:55 |
-| Frederick Oehl           | Would like to give a talk on his Master project, if at all possible.                                          | 14:55 - 15:20 |
-| Andreas Grigorjew        | Width Helps and Hinders Splitting Flows                                                                       | 15:20 - 15:55 |
-| Tobias/Gunnar            | _Closing remarks_                                                                                             | 15:55 - 16:00 |
+| **Speaker**              | **Title**                                                                                                     | **Time**                |
+|--------------------------|---------------------------------------------------------------------------------------------------------------|-------------------------|
+| Nicola Rizzo             | Suffix Tree Maneuvers for the Construction of Elastic Founder Graphs                                          | 09:00&nbsp;-&nbsp;09:25 |
+| Konstantinn Bonnet       | Constructing founder sets under allelic and non-allelic homologous recombination                              | 09:25&nbsp;-&nbsp;09:50 |
+| Karel Brinda             | The tree of life enables efficient and robust compression and search of microbes                              | 09:50&nbsp;-&nbsp;10:15 |
+| _Coffee break_           |                                                                                                               |                         |
+| Barış Ekim               | Approximate pattern counting in de Bruijn graphs is #W[1]-hard                                                | 10:30&nbsp;-&nbsp;10:55 |
+| Pengfei Wang             | Autocorrelations of strings: an upper bound.                                                                  | 10:55&nbsp;-&nbsp;11:20 |
+| Diego Diaz               | Efficient computation of MEMs in string collections using dictionary-based compression                        | 11:20&nbsp;-&nbsp;11:55 |
+| _Lunch break_            |                                                                                                               |                         |
+| Jarno Alanko             | Succinct k-mer Set Representations Using Subset Rank Queries on the Spectral Burrows-Wheeler Transform (SBWT) | 13:00&nbsp;-&nbsp;13:25 |
+| Giulio Ermanno Pibiri    | PTHash: Revisiting FCH Minimal Perfect Hashing                                                                | 13:25&nbsp;-&nbsp;13:50 |
+| Jens Zentgraf            | Fast gapped k-mer counting with subdivided multi-way bucketed Cuckoo hash tables                              | 13:50&nbsp;-&nbsp;14:15 |
+| _Coffee break_           |                                                                                                               |                         |
+| Fernando Hugo Cunha Dias | Fast, Flexible, and Exact Minimum Flow Decompositions via Integer Linear Programming                          | 14:30&nbsp;-&nbsp;14:55 |
+| Frederick Oehl           | Would like to give a talk on his Master project, if at all possible.                                          | 14:55&nbsp;-&nbsp;15:20 |
+| Andreas Grigorjew        | Width Helps and Hinders Splitting Flows                                                                       | 15:20&nbsp;-&nbsp;15:55 |
+| Tobias/Gunnar            | _Closing remarks_                                                                                             | 15:55&nbsp;-&nbsp;16:00 |
 
 ## Participants
 
