--- a/DSB2022/DSB2022.md
+++ b/DSB2022/DSB2022.md
@@ -28,25 +28,25 @@ As previously, there is no formal review, and the organizers reserve the right t
 | **Speaker**                | **Title**                                                                                                      | **Time** |   |       |
 |----------------------------|----------------------------------------------------------------------------------------------------------------|---------:|:-:|------:|
 | Tobias/Gunnar              | _Welcome_                                                                                                      | 9:00     | - | 9:15  |
-| Rayan Chikhi               | Minimizer Space de Bruijn Graphs for Pangenomics                                                               | 9:20     | - | 9:45  |
-| Andreas Rempel             | Developing a standard interface for k-mer-based index structures                                               | 9:45     | - | 10:10 |
-| Nicola Cotumaccio          | Graph pattern matching: what if labels can be strings?                                                         | 10:10    | - | 10:35 |
+| Rayan Chikhi               | Minimizer Space de Bruijn Graphs for Pangenomics [slides]({{ site.baseurl }}{% link DSB2022/slides/rayan_chikhi.pdf %})                                                              | 9:20     | - | 9:45  |
+| Andreas Rempel             | Developing a standard interface for k-mer-based index structures [slides]({{ site.baseurl }}{% link DSB2022/slides/andreas_rempel.pdf %})                                              | 9:45     | - | 10:10 |
+| Nicola Cotumaccio          | Graph pattern matching: what if labels can be strings? [slides]({{ site.baseurl }}{% link DSB2022/slides/nicola_cotumaccio.pdf %})                                                        | 10:10    | - | 10:35 |
 | _Break_                    |                                                                                                                |          |   |       |
 | Ramin Shirali Hossein Zade | HAT: Haplotype Assembly Tool using short and long reads                                                        | 11:00    | - | 11:25 |
 | Jasper van Bemmelen        | An optimized amplicon sequencing approach to estimating SARS-CoV-2 variant abundances in wastewater            | 11:25    | - | 11:50 |
-| Sandra Romain              | SVJedi-graph: using a variation graph to improve structural variant genotyping with long reads                 | 11:50    | - | 12:15 |
+| Sandra Romain              | SVJedi-graph: using a variation graph to improve structural variant genotyping with long reads [slides]({{ site.baseurl }}{% link DSB2022/slides/sandra_romain.pdf %})                | 11:50    | - | 12:15 |
 | _Lunch break_              |                                                                                                                |          |   |       |
-| Luca Parmigiani            | Open and closed pangenomes with k-mer counting                                                                 | 13:15    | - | 13:40 |
-| Manuel Cáceres             | Chaining for Accurate Alignment of Erroneous Long Reads to Acyclic Variation Graphs                            | 13:40    | - | 14:05 |
+| Luca Parmigiani            | Open and closed pangenomes with k-mer counting [slides]({{ site.baseurl }}{% link DSB2022/slides/luca_parmigiani.pdf %})                                                                | 13:15    | - | 13:40 |
+| Manuel Cáceres             | Chaining for Accurate Alignment of Erroneous Long Reads to Acyclic Variation Graphs [slides]({{ site.baseurl }}{% link DSB2022/slides/manuel_caceres.pdf %})                           | 13:40    | - | 14:05 |
 | Jorge Avila Cartes         | Accurate classification of SARS-CoV-2 clades using Frequency Chaos Game Representation                         | 14:05    | - | 14:30 |
 | _Coffee break_             |                                                                                                                |          |   |       |
 | Antoine Limasset           | Toward optimal fingerprint indexing for large scale genomics                                                   | 14:40    | - | 15:05 |
-| Lucas Robidou              | fimpera: low memory counting Approximate Membership Query                                                      | 15:05    | - | 15:30 |
-| Roland Wittler             | Bit-encoding of canonical k-mers                                                                               | 15:30    | - | 15:55 |
+| Lucas Robidou              | fimpera: low memory counting Approximate Membership Query [slides]({{ site.baseurl }}{% link DSB2022/slides/lucas_robidou.pdf %})                                                    | 15:05    | - | 15:30 |
+| Roland Wittler             | Bit-encoding of canonical k-mers [slides]({{ site.baseurl }}{% link DSB2022/slides/roland_wittler.pdf %})                                                                              | 15:30    | - | 15:55 |
 | _Coffee break_             |                                                                                                                |          |   |       |
-| Yoshihiro Shibuya          | Space-efficient sets differences with applications to Jaccard estimation                                       | 16:15    | - | 16:40 |
+| Yoshihiro Shibuya          | Space-efficient sets differences with applications to Jaccard estimation [slides]({{ site.baseurl }}{% link DSB2022/slides/yasahiro_shibuya.pdf %})                                      | 16:15    | - | 16:40 |
 | Sebastian Schmidt          | Minimum plain text representation of kmer sets                                                                 | 16:40    | - | 17:05 |
-| Victor Epain               | The reverse complement symmetry advantage of DNA fragments relationships for their storage in a directed graph | 17:05    | - | 17:30 |
+| Victor Epain               | The reverse complement symmetry advantage of DNA fragments relationships for their storage in a directed graph [slides]({{ site.baseurl }}{% link DSB2022/slides/victor_epain.pdf %}) | 17:05    | - | 17:30 |
 
 ---
 
@@ -55,20 +55,20 @@ As previously, there is no formal review, and the organizers reserve the right t
 | **Speaker**                | **Title**                                                                                                      | **Time** |   |       |
 |----------------------------|----------------------------------------------------------------------------------------------------------------|---------:|:-:|------:|
 | Nicola Rizzo               | Suffix Tree Maneuvers for the Construction of Elastic Founder Graphs                                           | 9:00     | - | 9:25  |
-| Konstantinn Bonnet         | Constructing founder sets under allelic and non-allelic homologous recombination                               | 9:25     | - | 9:50  |
-| Karel Brinda               | The tree of life enables efficient and robust compression and search of microbes                               | 9:50     | - | 10:15 |
+| Konstantinn Bonnet         | Constructing founder sets under allelic and non-allelic homologous recombination [slides]({{ site.baseurl }}{% link DSB2022/slides/konstantinn_bonnet.pdf %})                              | 9:25     | - | 9:50  |
+| Karel Brinda               | Efficient and Robust Search of Microbial Genomes via Phylogenetic Compression                                  | 9:50     | - | 10:15 |
 | _Coffee break_             |                                                                                                                |          |   |       |
 | Barış Ekim                 | Approximate pattern counting in de Bruijn graphs is #W[1]-hard                                                 | 10:30    | - | 10:55 |
 | Pengfei Wang               | Autocorrelations of strings: an upper bound.                                                                   | 10:55    | - | 11:20 |
 | Diego Diaz                 | Efficient computation of MEMs in string collections using dictionary-based compression                         | 11:20    | - | 11:55 |
 | _Lunch break_              |                                                                                                                |          |   |       |
-| Jarno Alanko               | Succinct k-mer Set Representations Using Subset Rank Queries on the Spectral Burrows-Wheeler Transform (SBWT)  | 13:00    | - | 13:25 |
-| Giulio Ermanno Pibiri      | PTHash: Revisiting FCH Minimal Perfect Hashing                                                                 | 13:25    | - | 13:50 |
-| Jens Zentgraf              | Fast gapped k-mer counting with subdivided multi-way bucketed Cuckoo hash tables                               | 13:50    | - | 14:15 |
+| Jarno Alanko               | Succinct k-mer Set Representations Using Subset Rank Queries on the Spectral Burrows-Wheeler Transform (SBWT) [slides]({{ site.baseurl }}{% link DSB2022/slides/jarno_alanko.pdf %})  | 13:00    | - | 13:25 |
+| Giulio Ermanno Pibiri      | PTHash: Revisiting FCH Minimal Perfect Hashing [slides]({{ site.baseurl }}{% link DSB2022/slides/giulio_ermanno_pibiri.pdf %})                                                                | 13:25    | - | 13:50 |
+| Jens Zentgraf              | Fast gapped k-mer counting with subdivided multi-way bucketed Cuckoo hash tables [slides]({{ site.baseurl }}{% link DSB2022/slides/jens_zentgraf.pdf %})                              | 13:50    | - | 14:15 |
 | _Coffee break_             |                                                                                                                |          |   |       |
 | Fernando Hugo Cunha Dias   | Fast, Flexible, and Exact Minimum Flow Decompositions via Integer Linear Programming                           | 14:30    | - | 14:55 |
-| Frederick Oehl             | Would like to give a talk on his Master project, if at all possible.                                           | 14:55    | - | 15:20 |
-| Andreas Grigorjew          | Width Helps and Hinders Splitting Flows                                                                        | 15:20    | - | 15:55 |
+| Frederick Oehl             | Would like to give a talk on his Master project, if at all possible. [slides]({{ site.baseurl }}{% link DSB2022/slides/frederik_oehl.pdf %})                                          | 14:55    | - | 15:20 |
+| Andreas Grigorjew          | Width Helps and Hinders Splitting Flows [slides]({{ site.baseurl }}{% link DSB2022/slides/andreas_grigorjew.pdf %})                                                                       | 15:20    | - | 15:55 |
 | Tobias/Gunnar              | _Closing remarks_                                                                                              | 15:55    | - | 16:00 |
 
 ## Participants
