--- a/DSB2023/DSB2023.md
+++ b/DSB2023/DSB2023.md
@@ -3,7 +3,7 @@ layout: "post"
 title: "DSB 2023 Delft - March 21-22"
 description: Workshop Data Structures in Bioinformatics
 permalink: /DSB2023/
-image: Delft.jpg
+image: Delft.jpeg
 ---
 ## How to participate
 
