--- a/DSB2023/DSB2023.md
+++ b/DSB2023/DSB2023.md
@@ -41,3 +41,5 @@ The TU Delft campus is within walking distance from the city center of Delft. Ho
 
 * Thomas Abeel
 * Jasmijn Baaijens
+
+For any questions about DSB2023, please reach out to [dsb2023@lists.tudelft.nl](mailto:dsb2023@lists.tudelft.nl).
