--- a/DSB2023/DSB2023.md
+++ b/DSB2023/DSB2023.md
@@ -7,13 +7,13 @@ image: Delft.jpeg
 ---
 ## How to participate
 
-**Presenting:** Submit an abstract through EasyChair. Submission opens 01-01-2023 and closes 31-01-2023.
-
-**Attending:** More info to come.
+More info to come.
 
 ## Submit an abstract
 
-As previously, there is no formal review, and the organizers reserve the right to select talks from the submissions to obtain a diverse and interesting program.
+Submit an abstract (max 250 words) through EasyChair [here](https://easychair.org/conferences/?conf=dsb2023). The submission portal closes on February 5th, 2023.
+
+As previously, there is no formal review. We intend to give everyone the opportunity to present but the organizers reserve the right to select talks from the submissions to obtain a diverse and interesting program.
 
 ## Program
 
@@ -35,7 +35,12 @@ The workshop will take place in Delft, Netherlands, at the [Aula (building 20)](
 
 ### Where to stay
 
-The TU Delft campus is within walking distance from the city center of Delft. Hotel suggestions will follow later.
+The TU Delft campus is within walking distance (~20 minutes) from the city center of Delft. Public transport to campus is also available. Make sure to book your hotel in time! Hotel suggestions:
+
+* [De Plataan](https://www.hoteldeplataan.nl/)
+* [Best Western Museum Hotel]([https://www.bestwestern.nl/booking-path/hotel-details/best-western-museumhotels-delft-delft-92579))
+* [Hampshire](https://www.hampshire-hotels.com/hotels/hampshire-hotel-delft-centre)
+* [Westcord](https://westcordhotels.nl/hotel/hotel-delft/) (recommended for those arriving by car)
 
 ## Organizers
 
