--- a/DSB2023/DSB2023.md
+++ b/DSB2023/DSB2023.md
@@ -7,7 +7,7 @@ image: Delft.jpeg
 ---
 ## How to participate
 
-More info to come.
+Registration for DSB is free. The registration portal will open soon.
 
 ## Submit an abstract
 
