--- a/DSB2023/DSB2023.md
+++ b/DSB2023/DSB2023.md
@@ -38,7 +38,7 @@ The workshop will take place in Delft, Netherlands, at the [Aula (building 20)](
 The TU Delft campus is within walking distance (~20 minutes) from the city center of Delft. Public transport to campus is also available. Make sure to book your hotel in time! Hotel suggestions:
 
 * [De Plataan](https://www.hoteldeplataan.nl/)
-* [Best Western Museum Hotel]([https://www.bestwestern.nl/booking-path/hotel-details/best-western-museumhotels-delft-delft-92579))
+* [Best Western Museum Hotel]([https://www.bestwestern.nl/booking-path/hotel-details/best-western-museumhotels-delft-delft-92579)
 * [Hampshire](https://www.hampshire-hotels.com/hotels/hampshire-hotel-delft-centre)
 * [Westcord](https://westcordhotels.nl/hotel/hotel-delft/) (recommended for those arriving by car)
 
