--- a/DSB2023/DSB2023.md
+++ b/DSB2023/DSB2023.md
@@ -15,9 +15,17 @@ Submit an abstract (max 250 words) through EasyChair [here](https://easychair.or
 
 As previously, there is no formal review. We intend to give everyone the opportunity to present but the organizers reserve the right to select talks from the submissions to obtain a diverse and interesting program.
 
-## Program
+## Program (tentative)
 
-T.B.D.
+**Monday 20 March**
+20:00 Welcome drinks
+
+**Tuesday 21 March**
+9:30 - 17:30 Workshop day 1
+18:30 Dinner
+
+**Wednesday 22 March**
+9:00 - 16:00 Workshop day 2
 
 ## Participants
 
