--- a/DSB2023/DSB2023.md
+++ b/DSB2023/DSB2023.md
@@ -7,7 +7,7 @@ image: Delft.jpeg
 ---
 ## How to participate
 
-Registration for DSB is free. The registration portal will open soon.
+Registration for DSB is free! **Registration deadline: March 7th, 2023**. The workshop includes two social events (welcome drinks and workshop dinner) which can be selected and paid for along with registration for the workshop. The registration portal will open soon.
 
 ## Submit an abstract
 
@@ -19,13 +19,13 @@ As previously, there is no formal review. We intend to give everyone the opportu
 
 **Monday 20 March**
 
-20:00 Welcome drinks
+19:30 - 22:00 Welcome drinks
 
 **Tuesday 21 March**
 
 9:30 - 17:30 Workshop day 1
 
-18:30 Dinner
+18:00 Dinner
 
 **Wednesday 22 March**
 
