--- a/DSB2023/DSB2023.md
+++ b/DSB2023/DSB2023.md
@@ -11,7 +11,7 @@ Registration for DSB is free! **Registration deadline: March 7th, 2023**. The wo
 
 ## Submit an abstract
 
-Submit an abstract (max 250 words) through EasyChair [here](https://easychair.org/conferences/?conf=dsb2023). The submission portal closes on February 5th, 2023.
+Submit an abstract (max 250 words) through EasyChair [here](https://easychair.org/conferences/?conf=dsb2023). **Abstract submission deadline: February 5th, 2023**.
 
 As previously, there is no formal review. We intend to give everyone the opportunity to present but the organizers reserve the right to select talks from the submissions to obtain a diverse and interesting program.
 
