--- a/DSB2023/DSB2023.md
+++ b/DSB2023/DSB2023.md
@@ -39,7 +39,7 @@ T.B.D.
 
 ### When
 
-Tuesday 21 March and Wednesday 22 March, 2023.
+Tuesday 21 March and Wednesday 22 March, welcome drinks on Monday 20 March 2023.
 
 ### Where
 
