--- a/DSB2023/DSB2023.md
+++ b/DSB2023/DSB2023.md
@@ -25,7 +25,7 @@ As previously, there is no formal review. We intend to give everyone the opportu
 
 9:30 - 17:30 Workshop day 1
 
-18:00 Dinner at [Café - Brasserie Huszár](https://huszar.nl), Hooikade 13, 2627 AB Delft. *To attend this event, make sure to register for it along with your workshop registration.*
+18:00 Dinner at [Café - Brasserie Huszár](https://goo.gl/maps/KmFCDJMYaYV7bxT39), Hooikade 13, 2627 AB Delft. *To attend this event, make sure to register for it along with your workshop registration.*
 
 **Wednesday 22 March**
 
