--- a/DSB2023/DSB2023.md
+++ b/DSB2023/DSB2023.md
@@ -7,7 +7,7 @@ image: Delft.jpeg
 ---
 ## How to participate
 
-Registration for DSB is free! **Registration deadline: March 7th, 2023**. The workshop includes two social events (welcome drinks and workshop dinner) which can be selected and paid for along with registration for the workshop. The registration portal will open February 1st.
+Registration for DSB is free! **Registration deadline: March 7th, 2023**. The workshop includes two social events (welcome drinks and workshop dinner) which can be selected and paid for along with registration for the workshop. Visit the registration portal [here](https://www.aanmelder.nl/141481).
 
 ## Submit an abstract
 
