--- a/DSB2023/DSB2023.md
+++ b/DSB2023/DSB2023.md
@@ -23,13 +23,13 @@ As previously, there is no formal review. We intend to give everyone the opportu
 
 **Tuesday 21 March**
 
-9:30 - 17:30 Workshop day 1
+9:00 - 17:30 Workshop day 1
 
 18:00 Dinner at [Café - Brasserie Huszár](https://goo.gl/maps/KmFCDJMYaYV7bxT39), Hooikade 13, 2627 AB Delft. *To attend this event, make sure to register for it along with your workshop registration.*
 
 **Wednesday 22 March**
 
-9:00 - 16:00 Workshop day 2
+9:15 - 16:00 Workshop day 2
 
 ## Participants
 
@@ -52,7 +52,7 @@ The TU Delft campus is within walking distance (~20 minutes) from the city cente
 * [De Plataan](https://www.hoteldeplataan.nl/) - *Ask for the TU Delft visitor discount rate when making your reservation*
 * [Best Western Museum Hotel]([https://www.bestwestern.nl/booking-path/hotel-details/best-western-museumhotels-delft-delft-92579) 
 * [Hampshire](https://www.hampshire-hotels.com/hotels/hampshire-hotel-delft-centre)
-* [Westcord](https://westcordhotels.nl/hotel/hotel-delft/) (recommended for those arriving by car). - Ask for the TU Delft visitor discount rate when making your reservation by email*
+* [Westcord](https://westcordhotels.nl/hotel/hotel-delft/) (recommended for those arriving by car). - *Ask for the TU Delft visitor discount rate when making your reservation by email*
 
 ## Organizers
 
