--- a/DSB2023/DSB2023.md
+++ b/DSB2023/DSB2023.md
@@ -7,7 +7,7 @@ image: Delft.jpeg
 ---
 ## How to participate
 
-Registration for DSB is free! **Registration deadline: March 7th, 2023**. The workshop includes two social events (welcome drinks and workshop dinner) which can be selected and paid for along with registration for the workshop. Visit the registration portal [here](https://www.aanmelder.nl/141481).
+Registration for DSB is free! **Registration deadline: March 7th, 2023**. The workshop includes two social events (welcome drinks and workshop dinner) which can be selected and paid for along with registration for the workshop. Visit the registration portal [here](https://www.aanmelder.nl/141481). Note that workshop capacity is limited, registrations are processed on a first-come-first-served basis.
 
 ## Submit an abstract
 
@@ -31,9 +31,7 @@ As previously, there is no formal review. We intend to give everyone the opportu
 
 9:15 - 16:00 Workshop day 2
 
-## Participants
 
-T.B.D.
 
 ## Practical
 
