--- a/DSB2023/DSB2023.md
+++ b/DSB2023/DSB2023.md
@@ -16,6 +16,7 @@ Submit an abstract (max 250 words) through EasyChair [here](https://easychair.or
 As previously, there is no formal review. We intend to give everyone the opportunity to present but the organizers reserve the right to select talks from the submissions to obtain a diverse and interesting program.
 
 ## Program (tentative)
+[Full program](DSB2023_program.pdf)
 
 **Monday 20 March**
 
