--- a/DSB2023/DSB2023.md
+++ b/DSB2023/DSB2023.md
@@ -15,8 +15,9 @@ Submit an abstract (max 250 words) through EasyChair [here](https://easychair.or
 
 As previously, there is no formal review. We intend to give everyone the opportunity to present but the organizers reserve the right to select talks from the submissions to obtain a diverse and interesting program.
 
-## Program (tentative)
-[Full program](DSB2023_program.pdf)
+## Program
+
+[Full program (pdf)](DSB2023_program.pdf)
 
 **Monday 20 March**
 
@@ -35,12 +36,6 @@ As previously, there is no formal review. We intend to give everyone the opportu
 
 
 ## Practical
-
-### When
-
-Tuesday 21 March and Wednesday 22 March, welcome drinks on Monday 20 March 2023.
-
-### Where
 
 The workshop will take place in Delft, Netherlands, at the [Aula (building 20)](https://iamap.tudelft.nl/poi/gebouw-20/) on the TU Delft campus.
 
