--- a/DSB2023/DSB2023.md
+++ b/DSB2023/DSB2023.md
@@ -37,7 +37,7 @@ As previously, there is no formal review. We intend to give everyone the opportu
 
 ## Practical
 
-The workshop will take place in Delft, Netherlands, at the [Aula (building 20)](https://iamap.tudelft.nl/poi/gebouw-20/) on the TU Delft campus.
+The workshop will take place in Delft, Netherlands, at the [Aula (building 20)](https://goo.gl/maps/nzppeFnoPeZ8PMPj8) on the TU Delft campus.
 
 ### Where to stay
 
