--- a/DSB2023/DSB2023.md
+++ b/DSB2023/DSB2023.md
@@ -19,6 +19,8 @@ As previously, there is no formal review. We intend to give everyone the opportu
 
 [Full program (pdf)](DSB2023_program.pdf)
 
+Slides from many of the talks are available [here](https://drive.google.com/drive/folders/18A3Trvbht8BxlFatbv0ImfrYF5B_KEx8?usp=share_link).
+
 **Monday 20 March**
 
 19:30 - 22:00 Welcome drinks at [De Gist](https://goo.gl/maps/cwuVSQe7p1CinBJt5), Phoenixstraat 4C, 2611 AL Delft. *To attend this event, make sure to register for it along with your workshop registration.*
