update photo and text in DSB2024

--- a/DSB2024/DSB2024.md
+++ b/DSB2024/DSB2024.md
@@ -3,7 +3,7 @@ layout: "post"
 title: "DSB 2024 Montpellier - March 14-15"
 description: Workshop Data Structures in Bioinformatics
 permalink: /DSB2024/
-image: "mtp_daphne_richard.jpg"
+image: "mtp_julien_daga_J5iirAB17TA.jpg"
 ---
 
 ## Where and when
@@ -22,9 +22,9 @@ We are currently looking for sponsors.
 
 ## Abstract submission
 
-You will be able to submit an abstract (max 250 words) through EasyChair.
+You will be able to submit an abstract (max 250 words) via a system not yet chosen.
 
- **Abstract submission deadline: February 1st, 2024**.
+ **Abstract submission deadline: January 26. 2024**.
 
 As previously, there is no formal review. We intend to give everyone the opportunity to present but the organizers reserve the right to select talks from the submissions to obtain a diverse and interesting program.
 
@@ -39,9 +39,8 @@ TBA
 - Nikolai Romashchenko (LIRMM - CNRS et Univ. Montpellier)
 - Pengfei Wang (LIRMM - CNRS et Univ. Montpellier)
 
-
 For any questions about DSB2024, please reach out to [rivals@lirmm.fr](mailto:rivals@lirmm.fr).
 
 ### Credits
+Photo de Julien Daga sur [Unsplash](https://unsplash.com/fr/photos/un-groupe-de-personnes-debout-au-sommet-dun-escalier-J5iirAB17TA?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash)
 
-Photo de Daphné Richard sur [Unsplash](https://unsplash.com/fr/photos/edificio-in-cemento-marrone-durante-il-giorno-Y4d1EF6Cz5w?utm_content=creditShareLink&utm_medium=referral&utm_source=unsplash)
