update DSB2024 with submission and registration information

--- a/DSB2024/DSB2024.md
+++ b/DSB2024/DSB2024.md
@@ -16,21 +16,28 @@ on March 14-15 in 2024.
 
 ## How to participate
 
-Registration for DSB shall be free! Registration information will be posted in due time
+Registration for participating to DSB 2024 is free! 
 
-We are currently looking for sponsors.
+Registrations and submissions are now open at: https://dsb-2024.sciencesconf.org/
+
+We are still looking for sponsors.
 
 ## Abstract submission
 
-You will be able to submit an abstract (max 250 words) via a system not yet chosen.
+You can submit an abstract (max 300 words) via the Sciencesconf system at
+https://dsb-2024.sciencesconf.org/
 
- **Abstract submission deadline: January 26. 2024**.
+To do so, you will be required to register by creating an account with your professional email.
+
+ **Abstract submission deadline: February 1st. 2024**.
 
 As previously, there is no formal review. We intend to give everyone the opportunity to present but the organizers reserve the right to select talks from the submissions to obtain a diverse and interesting program.
 
 ## Program
 
 TBA
+
+The list of abstracts selected for publication will be announced on February 15th 2024 at the latest.
 
 ## Organizers
 
