update DSB2024 with submission and registration information and url

--- a/DSB2024/DSB2024.md
+++ b/DSB2024/DSB2024.md
@@ -18,14 +18,15 @@ on March 14-15 in 2024.
 
 Registration for participating to DSB 2024 is free! 
 
-Registrations and submissions are now open at: https://dsb-2024.sciencesconf.org/
+Registrations and submissions are now open at: [https://dsb-2024.sciencesconf.org/](https://dsb-2024.sciencesconf.org/ "dsb registration site")
 
 We are still looking for sponsors.
 
 ## Abstract submission
 
 You can submit an abstract (max 300 words) via the Sciencesconf system at
-https://dsb-2024.sciencesconf.org/
+ [https://dsb-2024.sciencesconf.org/](https://dsb-2024.sciencesconf.org/ "dsb submission site")
+
 
 To do so, you will be required to register by creating an account with your professional email.
 
